Verifying GitHub ancestry. This completes the basic check functionality.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,11 @@
             <version>3.5.0</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.kohsuke</groupId>
+            <artifactId>github-api</artifactId>
+            <version>1.93</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
