--- a/lib/pom.xml
+++ b/lib/pom.xml
@@ -4,10 +4,9 @@
     <parent>
         <groupId>io.jenkins.tools.incrementals</groupId>
         <artifactId>parent</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-alpha-1-SNAPSHOT</version>
     </parent>
     <artifactId>lib</artifactId>
-    <version>1.0-SNAPSHOT</version>
     <dependencies>
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
