--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <!-- -Dincludes=org.jenkins-ci.*,io.jenkins.* -DgenerateBackupPoms=false -DupdateNonincremental=false -->
     <groupId>io.jenkins.tools.incrementals</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-alpha-1-SNAPSHOT</version>
+    <version>1.0-alpha-1</version>
     <packaging>pom</packaging>
     <name>Incrementals Tools POM</name>
     <description>Tools for working with JEP-305 “Incrementals”.</description>
@@ -25,7 +25,7 @@
         <connection>scm:git:git@github.com/jenkinsci/incrementals-tools.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/incrementals-tools.git</developerConnection>
         <url>https://github.com/jenkinsci/incrementals-tools</url>
-        <tag>HEAD</tag>
+        <tag>parent-1.0-alpha-1</tag>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
