--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -25,6 +25,11 @@
             <version>3.5.1</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.twdata.maven</groupId>
+            <artifactId>mojo-executor</artifactId>
+            <version>2.3.0</version>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
