--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.tools.incrementals</groupId>
     <artifactId>parent</artifactId>
-    <version>1.0-alpha-4-SNAPSHOT</version>
+    <version>1.0-beta-2-SNAPSHOT</version>
     <packaging>pom</packaging>
     <name>Incrementals Tools POM</name>
     <description>Tools for working with JEP-305 “Incrementals”.</description>
@@ -32,6 +32,7 @@
     <modules>
         <module>lib</module>
         <module>maven-plugin</module>
+        <module>git-changelist-maven-extension</module>
     </modules>
     <build>
         <plugins>
