--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -30,6 +30,12 @@
             <artifactId>mojo-executor</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <build>
         <pluginManagement>
