Defining an Enforcer rule allowing us to verify the minimum version of git-changelist-maven-extension.

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
         <module>lib</module>
         <module>maven-plugin</module>
         <module>git-changelist-maven-extension</module>
+        <module>enforcer-rules</module>
     </modules>
     <build>
         <plugins>
