--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,4 +13,4 @@ jobs:
       with:
         java-version: 1.8
     - name: Build with Maven
-      run: mvn package
+      run: mvn --batch --show-version package
