--- a/enforcer-rules/pom.xml
+++ b/enforcer-rules/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.jenkins.tools.incrementals</groupId>
         <artifactId>parent</artifactId>
-        <version>1.2-SNAPSHOT</version>
+        <version>1.2</version>
     </parent>
     <artifactId>incrementals-enforcer-rules</artifactId>
     <dependencies>
