--- a/enforcer-rules/pom.xml
+++ b/enforcer-rules/pom.xml
@@ -9,9 +9,15 @@
     <artifactId>incrementals-enforcer-rules</artifactId>
     <dependencies>
         <dependency>
+            <groupId>org.apache.maven</groupId>
+            <artifactId>maven-core</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven.enforcer</groupId>
-            <artifactId>enforcer-rules</artifactId>
-            <version>3.0.0-M1</version>
+            <artifactId>enforcer-api</artifactId>
+            <version>3.2.1</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
