--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.version>3.5.0</maven.version>
+        <maven.version>3.9.0</maven.version>
     </properties>
     <modules>
         <module>lib</module>
@@ -62,6 +62,11 @@
             <dependency>
                 <groupId>org.apache.maven</groupId>
                 <artifactId>maven-artifact</artifactId>
+                <version>${maven.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.maven</groupId>
+                <artifactId>maven-compat</artifactId>
                 <version>${maven.version}</version>
             </dependency>
             <dependency>
