--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>io.jenkins.tools.incrementals</groupId>
         <artifactId>parent</artifactId>
-        <version>1.6</version>
+        <version>1.7-SNAPSHOT</version>
     </parent>
     <artifactId>incrementals-maven-plugin</artifactId>
     <packaging>maven-plugin</packaging>
