--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -1,14 +1,14 @@
 ---
 version: 2
 updates:
-  - package-ecosystem: "maven"
-    directory: "/"
-    schedule:
-      interval: "weekly"
-    ignore:
-      # maven core artifacts are provided by the running maven, do not update to prevent consuming something unavailable
-      - dependency-name: "org.apache.maven:*"
- - package-ecosystem: "github-actions"
-    directory: "/"
-    schedule:
-      interval: "weekly"
+- package-ecosystem: maven
+  directory: /
+  schedule:
+    interval: weekly
+  ignore:
+  # maven core artifacts are provided by the running maven, do not update to prevent consuming something unavailable
+  - dependency-name: org.apache.maven:*
+- package-ecosystem: github-actions
+  directory: /
+  schedule:
+    interval: weekly
