--- a/enforcer-rules/pom.xml
+++ b/enforcer-rules/pom.xml
@@ -6,6 +6,7 @@
         <artifactId>parent</artifactId>
         <version>1.7-SNAPSHOT</version>
     </parent>
+    <url>https://github.com/jenkinsci/incrementals-tools/tree/master/enforcer-rules</url>
     <artifactId>incrementals-enforcer-rules</artifactId>
     <dependencies>
         <dependency>
