--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -9,9 +9,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        java-version: 8
+        distribution: 'temurin'
     - name: Build with Maven
       run: mvn -B -V -ntp -Dstyle.color=always package
       env:
