--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -5,13 +5,17 @@ on:
       - master
 jobs:
   build:
+    strategy:
+      matrix:
+        java: ["11", "17"]
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
+    - name: Set up JDK ${{ matrix.java }}
+      uses: actions/setup-java@v3
       with:
-        java-version: 1.8
+        java-version: "${{ matrix.java }}"
+        distribution: temurin
     - name: Build with Maven
       run: mvn -B -V -ntp -Dstyle.color=always package
       env:
