Specify scm inheritance in parent pom

--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
             <url>https://opensource.org/licenses/MIT</url>
         </license>
     </licenses>
-    <scm>
+    <scm child.scm.connection.inherit.append.path="false" child.scm.developerConnection.inherit.append.path="false" child.scm.url.inherit.append.path="false">
         <connection>scm:git:git@github.com/jenkinsci/incrementals-tools.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/incrementals-tools.git</developerConnection>
         <url>https://github.com/jenkinsci/incrementals-tools</url>
