--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,8 +1,7 @@
 name: CI
 on:
+  push:
   pull_request:
-    branches:
-      - master
 jobs:
   build:
     strategy:
@@ -10,12 +9,10 @@ jobs:
         java: ["11", "17"]
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
-    - name: Set up JDK ${{ matrix.java }}
-      uses: actions/setup-java@v3
+    - name: Setup Maven Action
+      uses: s4u/setup-maven-action@v1.8.0
       with:
         java-version: "${{ matrix.java }}"
-        distribution: temurin
     - name: Build with Maven
       run: mvn -B -V -ntp -Dstyle.color=always package
       env:
