--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.jenkins.tools.incrementals</groupId>
     <artifactId>parent</artifactId>
-    <version>1.8-SNAPSHOT</version>
+    <version>1.8</version>
     <packaging>pom</packaging>
     <name>Incrementals Tools POM</name>
     <description>Tools for working with JEP-305 “Incrementals”.</description>
@@ -24,7 +24,7 @@
         <connection>scm:git:git@github.com/jenkinsci/incrementals-tools.git</connection>
         <developerConnection>scm:git:ssh://git@github.com/jenkinsci/incrementals-tools.git</developerConnection>
         <url>https://github.com/jenkinsci/incrementals-tools</url>
-        <tag>HEAD</tag>
+        <tag>parent-1.8</tag>
     </scm>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
