--- a/maven-plugin/pom.xml
+++ b/maven-plugin/pom.xml
@@ -7,6 +7,7 @@
         <version>1.10-SNAPSHOT</version>
     </parent>
     <artifactId>incrementals-maven-plugin</artifactId>
+    <name>Incrementals Maven Plugin</name>
     <packaging>maven-plugin</packaging>
     <properties>
         <maven-plugin-tools.version>3.15.1</maven-plugin-tools.version>
